Implemented task filtering

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,11 +22,12 @@ ul {
 }
 
 a {
-	padding: 3px 7px;
+	padding: 2px 5px;
   border: 1px solid transparent;
   border-radius: 3px;
 	color: inherit;
-  text-decoration: none;
+	text-decoration: none;
+	cursor: pointer;
 }
 
 strong {
@@ -190,6 +191,10 @@ button {
 .todo-item.editing button.edit::after {
 	content: '\2714';
 	transform: rotate(0);
+}
+
+.active {
+	border: 1px solid #cc9a9a;
 }
 
 .footer {
